--- a/static/css/bundle.css
+++ b/static/css/bundle.css
@@ -1241,7 +1241,7 @@ body a,html a {
 .bottom-contact-item {
     width: 23px;
     height: 23px;
-    background: url(../static/images/social.png) no-repeat;
+    background: url(/static/images/Socialmedia.svg) no-repeat;
     background-size: 47px 23px;
     font-size: 0;
     display: block;
