--- a/tyumenctf.css
+++ b/tyumenctf.css
@@ -57,7 +57,7 @@
 .uctf-logo-1:before { content: '\e805'; } /* 'î …' */
 .uctf-mountains:before { content: '\e806'; } /* 'î †' */
 .uctf-404-icon:before { content: '\e80a'; } /* 'î Š' */
-.uctf-horiz-logo:before { content: '\e80d'; } /* 'î ' */
+.uctf-horiz-logo:before { content: image("static/images/UpperLeftLogoDark.svg"); } /* 'î ' */
 .uctf-text-logo:before { content: '\e80e'; } /* 'î Ž' */
 .uctf-vkontakte:before { content: '\f189'; } /* 'ï†‰' */
 .uctf-calendar:before { content: '\e845'; } /* 'î¡…' */
