--- a/tyumenctf.css
+++ b/tyumenctf.css
@@ -3,18 +3,8 @@
   font-weight: normal;
   font-style: normal;
 }
-/* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
-/* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
-/*
-@media screen and (-webkit-min-device-pixel-ratio:0) {
-  @font-face {
-    font-family: 'uralctf';
-    src: url('../fonts/uralctf.svg?49442232#uralctf') format('svg');
-  }
-}
-*/
 
- [class^="uctf-"]:before, [class*=" uctf-"]:before {
+ [class^="uctf-"]:before, [class*=" tctf-"]:before {
   font-family: "tyumenctf";
   font-style: normal;
   font-weight: normal;
